# nimakai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  mise.toml  nim.cfg  nimakai.nimble  rumdl.toml
.planning/debug/: function-calls-mismatch.md
.planning/skills/nimaproxy-ops/: SKILL.md
nimaproxy/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  nimaproxy.toml.example
nimaproxy/src/: config.rs  key_pool.rs  lib.rs  log_query.rs  main.rs  mock_http.rs  model_router.rs  model_stats.rs  proxy.rs  test_utils.rs  turn_log.rs
nimaproxy/tests/: coverage_gaps.rs  e2e_live.rs  integration.rs  live_chat.rs  live_circuit_breaker.rs  live_conversation.rs  live_key_rotation.rs  live_routing.rs  live_streaming.rs  live_tool_calls.rs  proxy_error_paths.rs  stress_test.rs
rustping/: Cargo.toml
rustping/src/: lib.rs
scripts/tests/: .env.template  .hurl.config  01-health-stats.hurl  02-model-routing.hurl  03-circuit-breaker.hurl  04-racing.hurl  05-error-handling.hurl  06-stress-tests.hurl  07-fuzz-tests.hurl
src/: nimakai.nim
src/nimakai/: catalog.nim  cli.nim  config.nim  discovery.nim  display.nim  opencode.nim  ping.nim  proxyffi.nim  rechistory.nim  recommend.nim  rustffi.nim  types.nim  update.nim  watch.nim
tests/: test_catalog.nim  test_cli.nim  test_config.nim  test_discovery.nim  test_display.nim  test_integration.nim  test_ping.nim  test_proxy.nim  test_rechistory.nim  test_recommend.nim  test_types.nim  test_watch.nim
