[package]
name = "nimaproxy"
version = "0.13.0"
edition = "2021"
description = "NVIDIA NIM key-rotation proxy — OpenAI-compatible, SSE streaming passthrough"

[[bin]]
name = "nimaproxy"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "stress_test"
path = "tests/stress_test.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "blocking"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bytes = "1"
futures = "0.3"
once_cell = "1"
libc = { version = "0.2", features = ["extra_traits"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"] }
mockito = "1"
mockall = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
