[package]
name = "nimrust_ping"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
futures = "0.3.32"

[dev-dependencies]
mockito = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
